--- a/server/pom.xml
+++ b/server/pom.xml
@@ -57,5 +57,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
     </dependencies>
 </project>
